syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "CombatInvokeEntry.proto";

// CmdId: 316
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message CombatInvocationsNotify {
	repeated CombatInvokeEntry invoke_list = 4;
}
